# namekit

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: api.rs  config.rs  domain.rs  main.rs  output.rs
