[package]
name = "namekit"
version = "0.1.0"
edition = "2024"
description = "A command line toolkit for quickly exploring domain names available for registration"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.29.0"
crossterm = "0.28.1"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "0.1.17"
dirs = "5.0.1"
futures-core = "0.3.31"
futures-util = "0.3.31"
